[gd_scene load_steps=4 format=3 uid="uid://ctqssw563fls0"]

[ext_resource type="Script" path="res://banana/banana.gd" id="1_niua6"]
[ext_resource type="Texture2D" uid="uid://b26lfv023s816" path="res://assets/bananas/banana.png" id="2_n2k3u"]
[ext_resource type="Script" path="res://banana/handle.gd" id="3_i2a3l"]

[node name="Banana" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_niua6")

[node name="Button" type="TextureButton" parent="."]
layout_mode = 0
offset_right = 128.0
offset_bottom = 128.0
texture_normal = ExtResource("2_n2k3u")
ignore_texture_size = true
stretch_mode = 0

[node name="TopLeft" type="Button" parent="." node_paths=PackedStringArray("share_x", "share_y", "opposite")]
layout_mode = 0
offset_left = -8.0
offset_top = -8.0
offset_right = 8.0
offset_bottom = 8.0
script = ExtResource("3_i2a3l")
share_x = NodePath("../BottomLeft")
share_y = NodePath("../TopRight")
opposite = NodePath("../BottomRight")

[node name="TopRight" type="Button" parent="." node_paths=PackedStringArray("share_x", "share_y", "opposite")]
layout_mode = 0
offset_left = 120.0
offset_top = -8.0
offset_right = 136.0
offset_bottom = 8.0
script = ExtResource("3_i2a3l")
share_x = NodePath("../BottomRight")
share_y = NodePath("../TopLeft")
opposite = NodePath("../BottomLeft")

[node name="BottomRight" type="Button" parent="." node_paths=PackedStringArray("share_x", "share_y", "opposite")]
layout_mode = 0
offset_left = 120.0
offset_top = 120.0
offset_right = 136.0
offset_bottom = 136.0
script = ExtResource("3_i2a3l")
share_x = NodePath("../TopRight")
share_y = NodePath("../BottomLeft")
opposite = NodePath("../TopLeft")

[node name="BottomLeft" type="Button" parent="." node_paths=PackedStringArray("share_x", "share_y", "opposite")]
layout_mode = 0
offset_left = -8.0
offset_top = 120.0
offset_right = 8.0
offset_bottom = 136.0
script = ExtResource("3_i2a3l")
share_x = NodePath("../TopLeft")
share_y = NodePath("../BottomRight")
opposite = NodePath("../TopRight")

[connection signal="button_down" from="Button" to="." method="_on_button_button_down"]
[connection signal="button_up" from="Button" to="." method="_on_button_button_up"]
